add the swagger documentation of update method
